2004-18-19  Derek Atkins  <derek@ihtfp.com>

	Neil Williams's "QOF create: functionality added" patch:

	QOF create: adding functions to be used with
	qof_object_new_instance for new qof_book_merge objects, including
	business objects.

	Small documentation tweak to make QofEntity and QofParam
	structures visible to doxygen.

	* src/import-export/qif-import/qif-dialog-utils.scm:
	  Perry Smith's Null Account Patch.  Make sure the security is
	  a real string before appending an account separator, so we
	  don't try to create a "null" account.

2004-08-19  Derek Atkins  <derek@ihtfp.com>

	* configure.in: change the gtkhtml order to search for >= 1.1 before
	  < 1.1, in order to try to fix #84707 on systems with multiple
	  versions of gtkhtml.

2004-08-12  David Montenegro  <sunrise2000@comcast.net>

        * src/report/standard-reports/trial-balance.scm:
	    src/report/standard-reports/equity-statement.scm:
	    src/report/report-system/report-utilities.scm:
	    Added to the work sheet special handling of
	    inventory and income summary accounts for
	    merchandising businesses.  Fixes #150008.

2004-08-11  Derek Atkins  <derek@ihtfp.com>

	* src/gnome/gnucash.desktop.in: make the desktop HIG compliant.
	  Fixes #145545

2004-07-20  Derek Atkins <derek@ihtfp.com>

	* src/engine/Scrub.c
	* src/engine/Scrub2.c
	* src/engine/gnc-numeric.c
	* src/engine/gnc-pricedb.c
	* src/engine/kvp-util.c
	* src/engine/qofid.c
	* src/engine/qofmath128.c
	* src/engine/qofquery.c
	* src/engine/qofsession.c
	* src/engine/test/test-numeric.c
	  Priit Laes' patch for C90 compliance.

2004-07-13  David Montenegro  <sunrise2000@comcast.net>

        * src/report/standard-reports/general-ledger.scm:
	  src/report/standard-reports/standard-reports.scm:
          src/report/standard-reports/Makefile.am:
          Added General Ledger report, a Transaction Report
          with a pre-set set of options.

	* src/report/standard-reports/transaction.scm: